k8s/cert-manager-setup.yaml
# Install cert-manager namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
