k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ctse-app
  labels:
    app: ctse
    environment: production
